--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "server.js",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node seeds/index.js"
   },
   "repository": {
     "type": "git",
